--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>AskPeeps</title>
+    <script src="https://kit.fontawesome.com/0ca43fb69c.js"></script>
   </head>
   <body>
     <div id="root"></div>
