color changes, stopProgagation and meta tags

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="title" property="og:title" content="AskPeeps">
+    <meta property="og:url" content="https://askpeeps.herokuapp.com/">
+    <meta name="image" property="og:image" content="https://imgur.com/K3s4nZm">
+    <meta name="description" property="og:description" content="An app where curious minds can safely ask questions to a growing community.">
+    <meta name="author" content="Pierre Guilbault">
     <title>AskPeeps</title>
     <script src="https://kit.fontawesome.com/0ca43fb69c.js"></script>
   </head>
