--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="title" property="og:title" content="AskPeeps">
     <meta property="og:type" content="https://askpeeps.herokuapp.com/">
-    <meta name="image" property="og:image" content="https://imgur.com/K3s4nZm.png">
+    <meta name="image" property="og:image" content="https://i.imgur.com/K3s4nZml.png">
     <meta name="description" property="og:description" content="An app where curious minds can safely ask questions to a growing community.">
     <meta name="author" content="Pierre Guilbault">
     <title>AskPeeps</title>
